--- a/index.html
+++ b/index.html
@@ -1,234 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <link
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>index</title>
+<link href="style.css" rel="stylesheet" type="text/css" />
+<link
       rel="stylesheet"
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-  </head>
+</head>
 
-  <body>
-    <header id="navbar">
-      <div class="logo">
-        <a href="index.html" style="font-size: 25px; color: white">
-          <img src="Resources/logo.png" alt="" class="navlogo" />
-          <p style="display: inline-block; margin-left: 5px">HALFBYTEE</p>
-        </a>
-      </div>
-      <nav class="nav-bar">
-        <ul>
-          <li>
-            <a href="index.html">
-              <p style="color: white">HOME</p>
-            </a>
-          </li>
-          <li>
-            <a href="feature.html">
-              <p style="color: white">STORE</p>
-            </a>
-          </li>
-          <li>
-            <a href="login.html">
-              <p style="color: white">MY ACCOUNT</p>
-            </a>
-          </li>
-        </ul>
-      </nav>
-      <button class="nav-button">
-        <a href="login.html" style="color: white">PLAY DIVINE</a>
-      </button>
-      <div class="hamburger">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
-      </div>
-    </header>
-    <div id="box-search">
-      <div class="thumbnail">
-        <video
+<body>
+<header id="navbar">
+  <div class="logo"> <a href="index.html"> <img src="Resources/logo.png" alt="" class="navlogo" />
+    <p>HALFBYTE</p>
+    </a> </div>
+  <nav class="nav-bar">
+    <ul>
+      <li> <a href="index.html">
+        <p>HOME</p>
+        </a> </li>
+      <li> <a href="feature.html">
+        <p>STORE</p>
+        </a> </li>
+      <li> <a href="login.html">
+        <p>MY ACCOUNT</p>
+        </a> </li>
+    </ul>
+  </nav>
+  <button class="nav-button">
+  <a href="login.html">PLAY DIVINE</a>
+  </button>
+  <div class="hamburger">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
+</header>
+<div id="box-search">
+  <div class="thumbnail">
+    <video
           class="header-pic"
           src="Resources/bnet_lightfall_homepage_desktop.mp4"
           loop
           autoplay
           muted
         ></video>
-        <img src="Resources/header-pic2.png" alt="" class="header-pic2" />
-        <div class="caption">
-          <p>DIVINE</p>
-          <p>OUR END BEGINS</p>
-          <br />
-          <button class="header-button">
-            <a href="login.html" style="color: white">LEARN MORE</a>
-          </button>
-        </div>
-      </div>
+    <img src="Resources/header-pic2.png" alt="" class="header-pic2" />
+    <div class="caption">
+      <p>DIVINE</p>
+      <p>OUR END BEGINS</p>
+      <br />
+      <button class="header-button">
+      <a href="login.html">LEARN MORE</a>
+      </button>
     </div>
-    <hr class="new1" />
-    <p
-      style="
-        color: white;
-        width: 95%;
-        margin: 0px auto 0px auto;
-        font-size: 20px;
-      "
-    >
-      FEATURED
-    </p>
+  </div>
+</div>
+<hr class="new1"/>
+<p class="new1-featured"> FEATURED </p>
+<br />
+<div class="grid">
+  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-1.jpg" alt=""/>
+    <div class="content fade"> SEASON OF THE PLUNDER </div>
+  </div>
+  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-2.jpg" alt=""/>
+    <div class="content fade"> DIVINE SHOWCASE </div>
+  </div>
+  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-3.jpg" alt=""/>
+    <div class="content fade"> EXPLORER WELCOME PAGE </div>
+  </div>
+  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-4.png" alt=""/>
+    <div class="content fade"> HISTORY OF DIVINE </div>
+  </div>
+</div>
+<hr class="new1" />
+<p class="new1-featured"> LATEST NEWS </p>
+<br/>
+<div class="news">
+  <div class="newsimage"> <img class="newscontent" src="Resources/mid-1.jpg" alt=""/> </div>
+  <div class="text">
+    <h1> THIS WEEK AT HALFBYTE - 14/11/2022 </h1>
     <br />
-    <div class="grid">
-      <div class="img-wrapper">
-        <img
-          class="zoom blur"
-          src="Resources/header-1.jpg"
-          alt=""
-          style="width: 100%"
-        />
-        <div class="content fade" style="color: white; font-size: 22px">
-          SEASON OF THE PLUNDER
-        </div>
-      </div>
-      <div class="img-wrapper">
-        <img
-          class="zoom blur"
-          src="Resources/header-2.jpg"
-          alt=""
-          style="width: 100%"
-        />
-        <div class="content fade" style="color: white; font-size: 22px">
-          DIVINE SHOWCASE
-        </div>
-      </div>
-      <div class="img-wrapper">
-        <img
-          class="zoom blur"
-          src="Resources/header-3.jpg"
-          alt=""
-          style="width: 100%"
-        />
-        <div class="content fade" style="color: white; font-size: 22px">
-          EXPLORER WELCOME PAGE
-        </div>
-      </div>
-      <div class="img-wrapper">
-        <img
-          class="zoom blur"
-          src="Resources/header-4.png"
-          alt=""
-          style="width: 100%"
-        />
-        <div class="content fade" style="color: white; font-size: 22px">
-          HISTORY OF DIVINE
-        </div>
-      </div>
-    </div>
-    <hr class="new1" />
-    <p
-      style="
-        color: white;
-        width: 95%;
-        margin: 0px auto 0px auto;
-        font-size: 20px;
-      "
-    >
-      LATEST NEWS
-    </p>
+    <p> This week at HALFBYTE, we dive into what's going on in the world of
+      Divine. </p>
+  </div>
+</div>
+<br />
+<div class="news">
+  <div class="newsimage"> <img class="newscontent" src="Resources/mid-2.jpg" alt=""/> </div>
+  <div class="text">
+    <h1> DIVINE HOTFIX 5.4.7 </h1>
     <br />
-    <div class="news">
-      <div class="newsimage">
-        <img src="Resources/mid-1.jpg" alt="" style="width: 95%" />
+    <p>Weapon balances and class abilities reworks.</p>
+  </div>
+</div>
+<br />
+<div class="news">
+  <div class="newsimage"> <img class="newscontent" src="Resources/mid-3.jpg" alt=""/> </div>
+  <div class="text">
+    <h1> THIS WEEK AT HALFBYTE - 21/11/2022 </h1>
+    <br />
+    <p> This week at HALFBYTE, we have a little chat about Guardian abilities
+      and the next step of evolution. With a little side of candy,
+      naturally. It is the last week of Festival of the Lost, after all. </p>
+  </div>
+</div>
+<br />
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="footer-col">
+        <h4>DIVINE</h4>
+        <ul>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Get Divine</a></li>
+          <li><a href="#">Seasons</a></li>
+          <li><a href="#">Community</a></li>
+        </ul>
       </div>
-      <div class="text">
-        <h1 style="color: white; margin: 20px auto auto auto">
-          THIS WEEK AT HALFBYTE - 14/11/2022
-        </h1>
+      <div class="footer-col">
+        <h4>HALFBYTE</h4>
+        <ul>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Tech Blog</a></li>
+          <li><a href="#">Press Room</a></li>
+          <li><a href="#">Halfbyte Newsroom</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>STORE</h4>
+        <ul>
+          <li><a href="#">What's new</a></li>
+          <li><a href="#">Merchandise</a></li>
+          <li><a href="#">Soundtraks</a></li>
+          <li><a href="#">Halfbye Rewards</a></li>
+        </ul>
+      </div>
+      <div class="footer-col">
+        <h4>follow us</h4>
+        <div class="social-links"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
         <br />
-        <p style="color: white">
-          This week at HALFBYTE, we dive into what's going on in the world of
-          Divine.
-        </p>
+        <p class="copyright"> &copy; 2022 Jeremy Chan Assignment. All rights reserved. </p>
       </div>
     </div>
-    <br />
-    <div class="news">
-      <div class="newsimage">
-        <img src="Resources/mid-2.jpg" alt="" style="width: 95%" />
-      </div>
-      <div class="text">
-        <h1 style="color: white; margin: 20px auto auto auto">
-          DIVINE HOTFIX 5.4.7
-        </h1>
-        <br />
-        <p style="color: white">Weapon balances and class abilities reworks.</p>
-      </div>
-    </div>
-    <br />
-    <div class="news">
-      <div class="newsimage">
-        <img src="Resources/mid-3.jpg" alt="" style="width: 95%" />
-      </div>
-      <div class="text">
-        <h1 style="color: white; margin: 20px auto auto auto">
-          THIS WEEK AT HALFBYTE - 21/11/2022
-        </h1>
-        <br />
-        <p style="color: white">
-          This week at HALFBYTE, we have a little chat about Guardian abilities
-          and the next step of evolution. With a little side of candy,
-          naturally. It is the last week of Festival of the Lost, after all.
-        </p>
-      </div>
-    </div>
-    <br />
-    <footer class="footer" style="background-color: #14191e">
-      <div class="container">
-        <div class="row">
-          <div class="footer-col">
-            <h4 style="color: white">DIVINE</h4>
-            <ul>
-              <li><a href="#">News</a></li>
-              <li><a href="#">Get Divine</a></li>
-              <li><a href="#">Seasons</a></li>
-              <li><a href="#">Community</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4 style="color: white">HALFBYTE</h4>
-            <ul>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Tech Blog</a></li>
-              <li><a href="#">Press Room</a></li>
-              <li><a href="#">Halfbyte Newsroom</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4 style="color: white">STORE</h4>
-            <ul>
-              <li><a href="#">What's new</a></li>
-              <li><a href="#">Merchandise</a></li>
-              <li><a href="#">Soundtraks</a></li>
-              <li><a href="#">Halfbye Rewards</a></li>
-            </ul>
-          </div>
-          <div class="footer-col">
-            <h4 style="color: white">follow us</h4>
-            <div class="social-links">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-            </div>
-            <br />
-            <p style="color: #bbbbbb">
-              &copy; 2022 Jeremy Chan Assignment. All rights reserved.
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <script src= "script.js" async></script>
-  </body>
+  </div>
+</footer>
+<script src= "script.js" async></script>
+</body>
 </html>
