--- a/feature.html
+++ b/feature.html
@@ -10,24 +10,24 @@
 
 <body>
 <header id="navbar">
-  <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;"> <img src="Resources/logo.png" alt="" class="navlogo">
-    <p style="display: inline-block; margin-left: 5px;"> HALFBYTE</p>
+  <div class="logo"> <a href="index.html"> <img src="Resources/logo.png" alt="" class="navlogo">
+    <p> HALFBYTE</p>
     </a> </div>
   <nav class="nav-bar">
     <ul>
       <li><a href="index.html">
-        <p style="color: white;">HOME</p>
+        <p>HOME</p>
         </a></li>
       <li><a href="feature.html">
-        <p style="color: white;">STORE</p>
+        <p>STORE</p>
         </a></li>
       <li><a href="login.html">
-        <p style="color: white;">MY ACCOUNT</p>
+        <p>MY ACCOUNT</p>
         </a></li>
     </ul>
   </nav>
   <button class="nav-button">
-  <a href="login.html" style="color: white;">PLAY DIVINE</a>
+  <a href="login.html">PLAY DIVINE</a>
   </button>
   <div class= "hamburger">
     <div class="line"></div>
@@ -36,22 +36,22 @@
   </div>
 </header>
 <div class="img">
-  <video src="Resources/Featured.mp4" loop autoplay muted style="width: 100%;"></video>
+  <video src="Resources/Featured.mp4" loop autoplay muted class="featurevid"></video>
 </div>
 <div class="feature">
   <h1>FINDING AND BUILDING YOUR DIVINE</h1>
   <br>
-  <p style="text-align: center;">Whoa! Simply said, there is a lot happening on right now. We wanted to make sure that you didn't miss any of the excitement since there are so many trailers, announcements, and huge news beats dropping today. Think of this as your one-stop shop for all that we have shared today.</p>
+  <p class="featureheading">Whoa! Simply said, there is a lot happening on right now. We wanted to make sure that you didn't miss any of the excitement since there are so many trailers, announcements, and huge news beats dropping today. Think of this as your one-stop shop for all that we have shared today.</p>
   <hr>
   <div class="feature-1">
-    <div class="feature-1-inner"><img src="Resources/feature-1.jpg" alt="" style="width: 100%;"></div>
+    <div class="feature-1-inner"><img src="Resources/feature-1.jpg" alt="" class="featurepic"></div>
     <div class="feature-1-inner">
       <h3>FINDING AND BUILDING YOUR DESTINY </h3>
       <p>Everyone was able to see the Showcase's extensive list of additions that will be added to Divinity over the following 12 months. The community has long asked for several, therefore we are thrilled to finally be able to give them to the players. Here is a brief summary of what is in store.</p>
     </div>
   </div>
   <div class="feature-1">
-    <div class="feature-1-inner"><img src="Resources/feature-2.jpg" alt="" style="width: 100%;"></div>
+    <div class="feature-1-inner"><img src="Resources/feature-2.jpg" alt="" class="featurepic"></div>
     <div class="feature-1-inner">
       <h3>EXPLORER RANKS</h3>
     </div>
@@ -60,7 +60,7 @@
     </div>
   </div>
   <div class="feature-1">
-    <div class="feature-1-inner"><img src="Resources/feature-3.jpg" alt="" style="width: 100%;"></div>
+    <div class="feature-1-inner"><img src="Resources/feature-3.jpg" alt="" class="featurepic"></div>
     <div class="feature-1-inner">
       <h3>MODS AND LOADOUT MANAGER</h3>
     </div>
@@ -76,7 +76,7 @@
     <div class="feature-1-inner">
       <p>The Taken King returns to life. The King's Fall raid will be open to access. Fight Oryx there. Raids that have been revised preserve the previous difficulties while changing the gameplay and puzzles. Because you played it years ago, don't assume you know everything because there are still new twists and secrets to discover.</p>
     </div>
-    <div class="feature-1-inner"><img src="Resources/feature-4.jpg" alt="" style="width: 100%;"></div>
+    <div class="feature-1-inner"><img src="Resources/feature-4.jpg" alt="" class="featurepic"></div>
     <div class="feature-1-inner">
       <p>During the first 24 hours after the raid commences, those in search of everlasting glory can compete for the title of World First. Similar to the Vault of Glass World First Race, the raid must be completed once in Contest Mode and then again while contending with certain obstacles. With the special day one raid insignia, you will still have some bragging rights even if you come in second. </p>
       <p>More details regarding Contest Mode and the requirements to take part in the raid can be found here. </p>
@@ -84,11 +84,11 @@
     </div>
   </div>
 </div>
-<footer class="footer" style="background-color: #14191e;">
+<footer class="footer">
   <div class="container">
     <div class="row">
       <div class="footer-col">
-        <h4 style="color: white;">DIVINE</h4>
+        <h4>DIVINE</h4>
         <ul>
           <li><a href="#">News</a> </li>
           <li><a href="#">Get Divine</a> </li>
@@ -97,7 +97,7 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color:white;">HALFBYTE</h4>
+        <h4>HALFBYTE</h4>
         <ul>
           <li><a href="#">Careers</a> </li>
           <li><a href="#">Tech Blog</a> </li>
@@ -106,7 +106,7 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color: white;">STORE</h4>
+        <h4>STORE</h4>
         <ul>
           <li><a href="#">What's new</a> </li>
           <li><a href="#">Merchandise</a> </li>
@@ -115,10 +115,10 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color: white;">follow us</h4>
+        <h4>follow us</h4>
         <div class="social-links"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
         <br>
-        <p style="color:#bbbbbb;">&copy; 2022 Jeremy Chan Assignment. All rights reserved.</p>
+        <p class="copyright">&copy; 2022 Jeremy Chan Assignment. All rights reserved.</p>
       </div>
     </div>
   </div>
