--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <p>OUR END BEGINS</p>
       <br />
       <button class="header-button">
-      <a href="login.html">LEARN MORE</a>
+      <a href="feature.html">LEARN MORE</a>
       </button>
     </div>
   </div>
