--- a/login.html
+++ b/login.html
@@ -10,24 +10,24 @@
 
 <body>
 <header id="navbar">
-  <div class="logo"> <a href="index.html" style="font-size: 25px;color: white;"> <img src="Resources/logo.png" alt="" class="navlogo">
-    <p style="display: inline-block; margin-left: 5px;"> HALFBYTE</p>
+  <div class="logo"> <a href="index.html"> <img src="Resources/logo.png" alt="" class="navlogo">
+    <p> HALFBYTE</p>
     </a> </div>
   <nav class="nav-bar">
     <ul>
       <li><a href="index.html">
-        <p style="color: white;">HOME</p>
+        <p>HOME</p>
         </a></li>
       <li><a href="feature.html">
-        <p style="color: white;">STORE</p>
+        <p>STORE</p>
         </a></li>
       <li><a href="login.html">
-        <p style="color: white;">MY ACCOUNT</p>
+        <p>MY ACCOUNT</p>
         </a></li>
     </ul>
   </nav>
   <button class="nav-button">
-  <a href="login.html" style="color: white;">PLAY DIVINE</a>
+  <a href="login.html">PLAY DIVINE</a>
   </button>
   <div class= "hamburger">
     <div class="line"></div>
@@ -42,10 +42,10 @@
       <h2>Welcome back Explorer</h2>
       <form>
         <div class="inputBx"> <span>Halfbyte ID</span>
-          <input type="text" style="color: white;">
+          <input type="text" id="inputt">
         </div>
         <div class="inputBx"> <span>Password</span>
-          <input type="password" style="color: white;">
+          <input type="password" id="inputt">
         </div>
         <div class="remember">
           <label>
@@ -61,20 +61,20 @@
       </form>
       <h3>Login with desired platform</h3>
       <ul class="sci">
-        <li class="fab fa-facebook-f" style="color: white;"></li>
-        <li class="fab fa-playstation" style="color: white;"></li>
-        <li class="fab fa-xbox" style="color: white;"></li>
-        <li class="fab fa-steam" style="color: white;"></li>
-        <li class="fab fa-twitch" style="color: white;"></li>
+        <li class="fab fa-facebook-f"></li>
+        <li class="fab fa-playstation"></li>
+        <li class="fab fa-xbox"></li>
+        <li class="fab fa-steam"></li>
+        <li class="fab fa-twitch"></li>
       </ul>
     </div>
   </div>
 </section>
-<footer class="footer" style="background-color: #14191e;">
+<footer class="footer">
   <div class="container">
     <div class="row">
       <div class="footer-col">
-        <h4 style="color: white;">DIVINE</h4>
+        <h4>DIVINE</h4>
         <ul>
           <li><a href="#">News</a> </li>
           <li><a href="#">Get Divine</a> </li>
@@ -83,7 +83,7 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color:white;">HALFBYTE</h4>
+        <h4>HALFBYTE</h4>
         <ul>
           <li><a href="#">Careers</a> </li>
           <li><a href="#">Tech Blog</a> </li>
@@ -92,7 +92,7 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color: white;">STORE</h4>
+        <h4>STORE</h4>
         <ul>
           <li><a href="#">What's new</a> </li>
           <li><a href="#">Merchandise</a> </li>
@@ -101,10 +101,10 @@
         </ul>
       </div>
       <div class="footer-col">
-        <h4 style="color: white;">follow us</h4>
+        <h4>follow us</h4>
         <div class="social-links"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
         <br>
-        <p style="color:#bbbbbb;">&copy; 2022 Jeremy Chan Assignment. All rights reserved.</p>
+        <p class="copyright">&copy; 2022 Jeremy Chan Assignment. All rights reserved.</p>
       </div>
     </div>
   </div>
