--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>index</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
-<link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
 </head>
 
 <body>
@@ -135,8 +131,8 @@
         <ul>
           <li><a href="#">What's new</a></li>
           <li><a href="#">Merchandise</a></li>
-          <li><a href="#">Soundtraks</a></li>
-          <li><a href="#">Halfbye Rewards</a></li>
+          <li><a href="#">Soundtracks</a></li>
+          <li><a href="#">Halfbyte Rewards</a></li>
         </ul>
       </div>
       <div class="footer-col">
