--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>
-<link href="style.css" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+<link href="style.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
 <body>
 <header id="navbar">
-  <div class="logo"> <a href="index.html"> <img src="Resources/logo.png" alt="" class="navlogo" />
+  <div class="logo"> <a href="index.html"> <img src="Resources/logo.png" alt="" class="navlogo">
     <p>HALFBYTE</p>
     </a> </div>
   <nav class="nav-bar">
@@ -44,67 +44,67 @@
           autoplay
           muted
         ></video>
-    <img src="Resources/header-pic2.png" alt="" class="header-pic2" />
+    <img src="Resources/header-pic2.png" alt="" class="header-pic2">
     <div class="caption">
       <p>DIVINE</p>
       <p>OUR END BEGINS</p>
-      <br />
+      <br>
       <button class="header-button">
       <a href="feature.html">LEARN MORE</a>
       </button>
     </div>
   </div>
 </div>
-<hr class="new1"/>
+<hr class="new1">
 <p class="new1-featured"> FEATURED </p>
-<br />
+<br>
 <div class="grid">
-  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-1.jpg" alt=""/>
+  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-1.jpg" alt="">
     <div class="content fade"> SEASON OF THE PLUNDER </div>
   </div>
-  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-2.jpg" alt=""/>
+  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-2.jpg" alt="">
     <div class="content fade"> DIVINE SHOWCASE </div>
   </div>
-  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-3.jpg" alt=""/>
+  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-3.jpg" alt="">
     <div class="content fade"> EXPLORER WELCOME PAGE </div>
   </div>
-  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-4.png" alt=""/>
+  <div class="img-wrapper"> <img class="zoom blur" src="Resources/header-4.png" alt="">
     <div class="content fade"> HISTORY OF DIVINE </div>
   </div>
 </div>
-<hr class="new1" />
+<hr class="new1">
 <p class="new1-featured"> LATEST NEWS </p>
-<br/>
+<br>
 <div class="news">
-  <div class="newsimage"> <img class="newscontent" src="Resources/mid-1.jpg" alt=""/> </div>
+  <div class="newsimage"> <img class="newscontent" src="Resources/mid-1.jpg" alt=""> </div>
   <div class="text">
     <h1> THIS WEEK AT HALFBYTE - 14/11/2022 </h1>
-    <br />
+    <br>
     <p> This week at HALFBYTE, we dive into what's going on in the world of
       Divine. </p>
   </div>
 </div>
-<br />
+<br>
 <div class="news">
-  <div class="newsimage"> <img class="newscontent" src="Resources/mid-2.jpg" alt=""/> </div>
+  <div class="newsimage"> <img class="newscontent" src="Resources/mid-2.jpg" alt=""> </div>
   <div class="text">
     <h1> DIVINE HOTFIX 5.4.7 </h1>
-    <br />
+    <br>
     <p>Weapon balances and class abilities reworks.</p>
   </div>
 </div>
-<br />
+<br>
 <div class="news">
-  <div class="newsimage"> <img class="newscontent" src="Resources/mid-3.jpg" alt=""/> </div>
+  <div class="newsimage"> <img class="newscontent" src="Resources/mid-3.jpg" alt=""> </div>
   <div class="text">
     <h1> THIS WEEK AT HALFBYTE - 21/11/2022 </h1>
-    <br />
+    <br>
     <p> This week at HALFBYTE, we have a little chat about Guardian abilities
       and the next step of evolution. With a little side of candy,
       naturally. It is the last week of Festival of the Lost, after all. </p>
   </div>
 </div>
-<br />
+<br>
 <footer class="footer">
   <div class="container">
     <div class="row">
@@ -138,7 +138,7 @@
       <div class="footer-col">
         <h4>follow us</h4>
         <div class="social-links"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
-        <br />
+        <br>
         <p class="copyright"> &copy; 2022 Jeremy Chan Assignment. All rights reserved. </p>
       </div>
     </div>
