45th commit, added more Readme features

--- a/login.html
+++ b/login.html
@@ -45,6 +45,7 @@
           <input type="text" id="inputt">
         </div>
         <div class="inputBx"> <span>Password</span>
+			<input type="text" id="inputt2">
         </div>
         <div class="remember">
           <label>
