Changed the whole feature page

--- a/feature.html
+++ b/feature.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>feature</title>
+<meta charset="UTF-8">
+<title>index</title>
 <link href="style.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 
@@ -26,64 +26,42 @@
         </a></li>
     </ul>
   </nav>
-  <button class="nav-button">
-  <a href="login.html">PLAY DIVINE</a>
-  </button>
+  <form action="login.html" method="get">
+    <button class="nav-button"> PLAY DIVINE </button>
+  </form>
   <div class= "hamburger">
     <div class="line"></div>
     <div class="line"></div>
     <div class="line"></div>
   </div>
 </header>
-<div class="img">
-  <video src="Resources/Featured.mp4" loop autoplay muted class="featurevid"></video>
-</div>
-<div class="feature">
-  <h1>FINDING AND BUILDING YOUR DIVINE</h1>
-  <br>
-  <p class="featureheading">Whoa! Simply said, there is a lot happening on right now. We wanted to make sure that you didn't miss any of the excitement since there are so many trailers, announcements, and huge news beats dropping today. Think of this as your one-stop shop for all that we have shared today.</p>
-  <hr>
-  <div class="feature-1">
-    <div class="feature-1-inner"><img src="Resources/feature-1.jpg" alt="" class="featurepic"></div>
-    <div class="feature-1-inner">
-      <h3>FINDING AND BUILDING YOUR DESTINY </h3>
-      <p>Everyone was able to see the Showcase's extensive list of additions that will be added to Divinity over the following 12 months. The community has long asked for several, therefore we are thrilled to finally be able to give them to the players. Here is a brief summary of what is in store.</p>
+<div class="firstfeature">
+  <video src="Resources/feature-2.mp4" autoplay muted loop class="featurevid2"></video>
+	<img src="Resources/feature2mobile.jpg" class="featureimg2">
+  <div class="firstfeatureouter">
+    <div class="firstfeatureinner1"><img src="Resources/featureicon.png" class="iconfeature">
+      <p>DIVINE<br>
+        THE HIVE QUEEN</p>
     </div>
-  </div>
-  <div class="feature-1">
-    <div class="feature-1-inner"><img src="Resources/feature-2.jpg" alt="" class="featurepic"></div>
-    <div class="feature-1-inner">
-      <h3>EXPLORER RANKS</h3>
+    <hr class="new2">
+    <div class="firstfeatureinner">
+      <div class="feature1"><img src="Resources/feature1img.jpg" class="feature1img">
+        <p> Deluxe Edition </p>
+      </div>
     </div>
-    <div class="feature-1-inner">
-      <p>It is not simple to become a legend, and occasionally some direction is needed. So let us present you to the Explorer Ranks, a reputation system that will both assist new players in navigating the game and reward seasoned players for their great play overall and for aiding others.</p>
+    <div class="firstfeatureinner">
+      <div class="feature1"><img src="Resources/feature2img.jpg" style="width: 80px;">
+        <p class="feature1text"> Standard Edition </p>
+      </div>
     </div>
-  </div>
-  <div class="feature-1">
-    <div class="feature-1-inner"><img src="Resources/feature-3.jpg" alt="" class="featurepic"></div>
-    <div class="feature-1-inner">
-      <h3>MODS AND LOADOUT MANAGER</h3>
-    </div>
-    <div class="feature-1-inner">
-      <p>Up until now, there hasn't been an easy way to create custom builds in-game. It takes effort and patience. You can construct and store a build in one location thanks to the new modifications and loadout manager included with Lightfall. It will also be simple to switch between all of your builds; all you need to do is choose the build from your Character panel.</p>
-    </div>
-  </div>
-  <hr>
-  <div class="feature-1">
-    <div class="feature-1-inner">
-      <h3>HAIL THE KING</h3>
-    </div>
-    <div class="feature-1-inner">
-      <p>The Taken King returns to life. The King's Fall raid will be open to access. Fight Oryx there. Raids that have been revised preserve the previous difficulties while changing the gameplay and puzzles. Because you played it years ago, don't assume you know everything because there are still new twists and secrets to discover.</p>
-    </div>
-    <div class="feature-1-inner"><img src="Resources/feature-4.jpg" alt="" class="featurepic"></div>
-    <div class="feature-1-inner">
-      <p>During the first 24 hours after the raid commences, those in search of everlasting glory can compete for the title of World First. Similar to the Vault of Glass World First Race, the raid must be completed once in Contest Mode and then again while contending with certain obstacles. With the special day one raid insignia, you will still have some bragging rights even if you come in second. </p>
-      <p>More details regarding Contest Mode and the requirements to take part in the raid can be found here. </p>
-      <p>For more information on how to watch the best raiders in the world compete for glory and championship belts, visit our World First Race tune-in page.</p>
+    <div class="firstfeatureinner2">
+      <form action="login.html" method="get" class="featurebutton">
+        <button class="nav-button2"> BUY NOW </button>
+      </form>
     </div>
   </div>
 </div>
+	
 <footer class="footer">
   <div class="container">
     <div class="row">
