--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </a> </li>
     </ul>
   </nav>
-  <button class="nav-button">
-  <a href="login.html">PLAY DIVINE</a>
-  </button>
+  <form action="login.html" method="get">
+    <button class="nav-button"> PLAY DIVINE </button>
+  </form>
   <div class="hamburger">
     <div class="line"></div>
     <div class="line"></div>
@@ -49,9 +49,9 @@
       <p>DIVINE</p>
       <p>OUR END BEGINS</p>
       <br>
-      <button class="header-button">
-      <a href="feature.html">LEARN MORE</a>
-      </button>
+      <form action="login.html" method="get">
+        <button class="header-button">LEARN MORE</button>
+      </form>
     </div>
   </div>
 </div>
