--- a/login.html
+++ b/login.html
@@ -26,9 +26,9 @@
         </a></li>
     </ul>
   </nav>
-  <button class="nav-button">
-  <a href="login.html">PLAY DIVINE</a>
-  </button>
+  <form action="login.html" method="get">
+    <button class="nav-button"> PLAY DIVINE </button>
+  </form>
   <div class= "hamburger">
     <div class="line"></div>
     <div class="line"></div>
@@ -45,7 +45,7 @@
           <input type="text" id="inputt">
         </div>
         <div class="inputBx"> <span>Password</span>
-			<input type="text" id="inputt2">
+          <input type="text" id="inputt2">
         </div>
         <div class="remember">
           <label>
