--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p>DIVINE</p>
       <p>OUR END BEGINS</p>
       <br>
-      <form action="login.html" method="get">
+      <form action="feature.html" method="get">
         <button class="header-button">LEARN MORE</button>
       </form>
     </div>
