--- a/feature.html
+++ b/feature.html
@@ -37,7 +37,7 @@
 </header>
 <div class="firstfeature">
   <video src="Resources/feature-2.mp4" autoplay muted loop class="featurevid2"></video>
-	<img src="Resources/feature2mobile.jpg" class="featureimg2">
+  <img src="Resources/feature2mobile.jpg" class="featureimg2">
   <div class="firstfeatureouter">
     <div class="firstfeatureinner1"><img src="Resources/featureicon.png" class="iconfeature">
       <p>DIVINE<br>
@@ -61,11 +61,19 @@
     </div>
   </div>
 </div>
-	<div class="featureouter">
-	<div class="featureinner1" style=""><h1>UNDERTAKE THE NEW CAMPAIGN</h1><br><p>Savathûn, Sword-Breaker, and Sister of Shapes. Savathûn, Sword-Breaker, and Sister of Shapes. Those who are determined to comprehend the Demon Queen's mysterious hold over the Light are awaited. She gives her men a new sense of purpose and gives them power they have never experienced. Explorer, come. Enter her Throne World to take part in the most successful campaign yet and reclaim the light.</p></div>
-	<div class="featureinner"><video src="Resources/Trailer.mp4" controls style="width: 60%;"></video> </div>
-	
-	</div>
+<div class="featureouter">
+  <div class="featureinner1">
+    <h1>UNDERTAKE THE NEW CAMPAIGN</h1>
+    <br>
+    <p>Savathûn, Sword-Breaker, and Sister of Shapes. Savathûn, Sword-Breaker, and Sister of Shapes. Those who are determined to comprehend the Demon Queen's mysterious hold over the Light are awaited. She gives her men a new sense of purpose and gives them power they have never experienced. Explorer, come. Enter her Throne World to take part in the most successful campaign yet and reclaim the light.</p>
+  </div>
+  <div class="featureinner">
+    <video src="Resources/Trailer.mp4" controls style="width: 80%;"></video>
+  </div>
+</div>
+	<hr class="new1">
+	<p class="new1-featured"> DETAILS </p>
+
 <footer class="footer">
   <div class="container">
     <div class="row">
